# ssl-cert-expiry-checker

./: .gitignore  README.md  pyproject.toml
cert_checker/: check.py
tests/: test_cert_checker.py
